# notes

./: .gitignore  pyproject.toml
webnotes/main/: admin.py  apps.py  forms.py  middlewares.py  models.py  urls.py  views.py
webnotes/main/migrations/: 0001_initial.py  0002_delete_testmodel.py  0003_initial.py  0004_testmodel.py  0005_delete_testmodel.py  0006_alter_note_options_note_slug.py  0007_alter_note_slug.py  0008_alter_note_slug.py  0009_alter_note_slug.py  0010_tag_slug.py  0011_remove_tag_notes_note_tags.py  0012_note_author_tag_author_alter_note_tags.py
webnotes/main/static/: style.css
webnotes/main/templates/: basic_template.html  index.html
webnotes/main/templates/main/: auth_login.html  auth_logout.html  base_main.html  index.html  note_create.html  note_delete.html  note_read.html  note_update.html  search_list.html  tag_delete.html  tag_items.html  tag_link_posts.html  tag_list.html  tag_update.html
webnotes/main/templates/main/includes/: full_card.html  pagination_block.html  short_card.html
webnotes/static/css/: style.css
webnotes/templates/: basic.html
webnotes/webnotes/: asgi.py  settings.py  urls.py  wsgi.py
