[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["VasyaPupkin120 <VPupkinza@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
bpython = "^0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
